put photos, informations on each city

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
   <body>
     <div id="map"></div>
     <div id="legend" class='legend'><h3 class='legendtitle'>Legend</h3>
-        <div id="entity"><img class ="image" src="./image/education.png" alt="graduationImage"> <span>Education</span></div>
-        <div id="entity"><img class ="image" src="./image/internship.png" alt="internshipImage"> <span>Internship</span></div>
-        <div id="entity"><img class ="image" src="./image/military.png" alt="internshipImage"> <span>Military</span></div>
-        <div id="entity"><img class ="image" src="./image/baby.png" alt="internshipImage"> <span>Born and Bred</span></div>
+        <div id='legendEducation'><img class ="image" src="./image/education.png" alt="educationImage"> <span>Education</span></div>
+        <div id='legendInternship'><img class ="image" src="./image/internship.png" alt="internshipImage"> <span>Internship</span></div>
+        <div id='legendMilitary'><img class ="image" src="./image/military.png" alt="militaryImage"> <span>Military</span></div>
+        <div id='legendBaby'><img class ="image" src="./image/baby.png" alt="baby"> <span>Born and Bred</span></div>
+        <div id='legendProgramming'><img class ="image" src="./image/programming.png" alt="programmingImage"> <span>Programming</span></div>
     </div>
   </body>
 </html>
