--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!-- google maps API -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCY0zTSTELi-Rb65wxEerwsTtQibAYAFp4&callback=initMap"
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHqKFEIE-hvel-zo24-YRSJgdV49_f-I4&language=en&callback=initMap"
     type="text/javascript"></script>
     
     <!-- Marker Cluster -->
