add real legend

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div id='legendMilitary'><img class ="image" src="./image/military.png" alt="militaryImage"> <span>Military</span></div>
         <div id='legendBaby'><img class ="image" src="./image/baby.png" alt="baby"> <span>Born and Bred</span></div>
         <div id='legendProgramming'><img class ="image" src="./image/programming.png" alt="programmingImage"> <span>Programming</span></div>
+        <div id='legendWork'><img class ="image" src="./image/work.png" alt="workImage"> <span>Work</span></div>
     </div>
   </body>
 </html>
